bugfix(Navbar component): dark mode icon hover and active bg color

--- a/src/index.css
+++ b/src/index.css
@@ -159,8 +159,3 @@ input {
     background-color: none;
 }
 
-/* .burger-menu:hover {
-    background-color: #3c7ad1;
-    transition: background-size, 0.1s ease-in-out;
-} */
-
